--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.4",
+    "modules": "^0.4.0",
+    "node": "^19.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "styled-component": "^2.8.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
