--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.4",
+    "dotenv": "^16.0.3",
     "modules": "^0.4.0",
     "node": "^19.4.0",
     "react": "^18.2.0",
