--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.4",
+    "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.2.6",
     "dotenv": "^16.0.3",
     "modules": "^0.4.0",
     "node": "^19.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.7.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.8.0",
+    "react-scripts": "^5.0.1",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +39,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "name": "projeto15-natureba-front",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lucas-palmeida/projeto15-natureba-front.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lucas-palmeida/projeto15-natureba-front/issues"
+  },
+  "homepage": "https://github.com/lucas-palmeida/projeto15-natureba-front#readme"
 }
